完成0.4版，修复bug